examples/test/testpolicy10642.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10642
  namespace: namespace63
spec:
  podSelector:
    matchLabels:
      key27: value14
      key22: value8
      key21: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value25
          key36: value45
      podSelector:
        matchLabels:
          key46: value13
